--- a/style.scss
+++ b/style.scss
@@ -19,8 +19,9 @@ html {
 
 body {
 	background: $white;
-  font: 18px/1.4 $helvetica;
+  font: 18px/1.4;
   color: $darkGray;
+font-family: 'PT Mono', monospace;
 }
 
 .container {
