--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="icon" href="images/favicon.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="{{ site.baseurl }}/images/favicon.png" sizes="16x16" type="image/png">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
     <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
