--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ body {
 	background: $white;
   font: 18px/1.4;
   color: $darkGray;
-font-family: 'PT Mono', monospace;
+font-family: 'PT Mono', monospace !important;
 }
 
 .container {
