--- a/style.scss
+++ b/style.scss
@@ -274,6 +274,7 @@ nav {
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   background-color: $lightGray;
+background-image: url(https://github.com/sssofia/sofiaescobar/blob/master/images/galaxy.jpg?raw=true);
 }
 
 footer {
