Added logo to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
+          <img src="https://github.com/sssofia/sofiaescobar/blob/master/images/logo-sophie.png?raw=true">
         </footer>
       </div>
     </div>
