new description and about

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,11 +28,12 @@
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
+            <p class="site-description">Un vistazo dentro de mi mente diseñadora/programadora</p>
           </div>
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/about">Acerca de mi</a>
           </nav>
         </header>
       </div>
