--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
+            <p class="tagline">Y un pequeño blog sobre diseño y programación</p>
           </div>
 
           <nav>
