--- a/style.scss
+++ b/style.scss
@@ -165,8 +165,8 @@ img {
 
 .site-avatar {
   float: left;
-  width: 70px;
-  height: 70px;
+  width: 80px;
+  height: 80px;
   margin-right: 15px;
 
   @include mobile {
@@ -207,6 +207,12 @@ img {
   @include mobile {
     margin: 3px 0;
   }
+}
+
+.tagline {
+font-size: 12px;
+    margin-top: 10px;
+    margin-bottom: 0;	
 }
 
 nav {
