--- a/style.scss
+++ b/style.scss
@@ -236,7 +236,8 @@ nav {
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
+      color: #886CE4;
+      text-decoration: underline;
     }
   }
 }
