--- a/style.scss
+++ b/style.scss
@@ -229,7 +229,8 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkGray;
+    color: #886CE4;
+    text-decoration: underline;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
